# reference-validator

./: README.md  comprehensive_test.bib  generate_test_bib.py  pyproject.toml  references.bib  references_test.bib  validate_bibtex.py
.github/workflows/: docs.yml
docs/rules/: gui_verification.md
docs/source/: api.rst  conf.py  gui.md  index.rst  installation.md  logic.md  sources.md  usage.md
docs/source/_static/: custom.css  custom.js
docs/source/_templates/components/: foot-copyright.html
